@@ -3,7 +3,7 @@
 #ifndef _CU_FILE_IN_STREAM_H_
 #define _CU_FILE_IN_STREAM_H_
 
-#include <fstream>
+#include <cstdio>
 #include "../src/Copper.h"
 
 namespace Cu {
@@ -11,13 +11,14 @@ namespace Cu {
 //! File-In-Stream
 /* A safe, convenient reader for a stream. */
 class FileInStream : public ByteStream {
-	std::ifstream  stream;
-	UInteger  index;
+	std::FILE*  rfile;
+	bool  atEOF;
 	UInteger  line;
 	UInteger  column;
 
 public:
 	FileInStream( const char*  filename );
+	~FileInStream();
 	virtual char getNextByte();
 	virtual bool atEOS();
 	UInteger getLine();
