@@ -1,5 +1,5 @@
 ====================
-2018/8/17 - 2018/10/13
+2018/8/17 - 2018/10/16
 v 6-0.52
 
 - Now on branch Feldspar.
@@ -35,6 +35,7 @@ v 6-0.52
 - Fixed bounds checking on indexes used in Engine::process_sys_list_sublist().
 - Added Numeric::StaticTypeName() and Numeric::typeName().
 - Changed all system function error logging and foreign function error logging to use print(LogMessage).
+- Fixed bug in Engine::run() that failed to check for end-of-stream when the parsing return requested more.
 
 Printer.h
 - Updated to use Numeric for printing numbers instead of the usual Integer and Decimal types.
@@ -42,6 +43,9 @@ Printer.h
 InStreamLogger.h
 - Added ability to print tokens.
 - Added ability to print(LogMessage).
+
+FileInStream
+- Changed implementation to use std::FILE insteam of std::fstream.
 
 
 ====================
